--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,14 @@
+.App {
+    max-width: 500px;
+    margin: 0 auto;
+}
+
 .todoList {
     border: 1px solid black;
     padding: 20px;
 }
 p {
-    border: 1px solid black;
-    border-radius: 1rem;
+    border-bottom: 1px solid black;
     padding: 10px;
 }
 
@@ -13,9 +17,6 @@ p {
     margin: 0 auto;
 }
 
-input#task{
-    width: 95%;
-}
 
 .taskDisplay{
     display: flex;
@@ -24,4 +25,8 @@ input#task{
 
 .fa-times-circle:before {
     font-size: 25px;
+}
+
+.enterInputDisplay{
+    display: flex;
 }
